y.output
Terminais sem uso na gramática

   FLOAT
   UMINUS


Gramática

    0 $accept: program $end

    1 program: program statement '\n'
    2        | %empty

    3 statement: expression
    4          | VARIABLE expression

    5 expression: INTEGER
    6           | VARIABLE
    7           | expression '+' expression
    8           | expression '-' expression
    9           | expression '*' expression
   10           | expression '/' expression
   11           | expression '>' expression
   12           | expression '<' expression
   13           | expression GE expression
   14           | expression LE expression
   15           | expression EQ expression
   16           | expression NE expression
   17           | logico
   18           | '(' expression ')'

   19 logico: TRUE
   20       | FALSE
   21       | NOT expression
   22       | expression OR expression
   23       | expression AND expression


Terminais, com as regras onde eles aparecem

$end (0) 0
'\n' (10) 1
'(' (40) 18
')' (41) 18
'*' (42) 9
'+' (43) 7
'-' (45) 8
'/' (47) 10
'<' (60) 12
'>' (62) 11
error (256)
INTEGER (258) 5
FLOAT (259)
VARIABLE (260) 4 6
TRUE (261) 19
FALSE (262) 20
LE (263) 14
GE (264) 13
EQ (265) 15
NE (266) 16
AND (267) 23
OR (268) 22
NOT (269) 21
UMINUS (270)


Não terminais com as regras onde eles aparecem

$accept (25)
    à esquerda: 0
program (26)
    à esquerda: 1 2, à direita: 0 1
statement (27)
    à esquerda: 3 4, à direita: 1
expression (28)
    à esquerda: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, à direita:
    3 4 7 8 9 10 11 12 13 14 15 16 18 21 22 23
logico (29)
    à esquerda: 19 20 21 22 23, à direita: 17


Estado 0

    0 $accept: . program $end

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 1


Estado 1

    0 $accept: program . $end
    1 program: program . statement '\n'

    $end      deslocar, e ir ao estado 2
    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    statement   ir ao estado 9
    expression  ir ao estado 10
    logico      ir ao estado 11


Estado 2

    0 $accept: program $end .

    $padrão  aceitar


Estado 3

    5 expression: INTEGER .

    $padrão  reduzir usando a regra 5 (expression)


Estado 4

    4 statement: VARIABLE . expression
    6 expression: VARIABLE .

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 6 (expression)

    expression  ir ao estado 13
    logico      ir ao estado 11


Estado 5

   19 logico: TRUE .

    $padrão  reduzir usando a regra 19 (logico)


Estado 6

   20 logico: FALSE .

    $padrão  reduzir usando a regra 20 (logico)


Estado 7

   21 logico: NOT . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 14
    logico      ir ao estado 11


Estado 8

   18 expression: '(' . expression ')'

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 15
    logico      ir ao estado 11


Estado 9

    1 program: program statement . '\n'

    '\n'  deslocar, e ir ao estado 16


Estado 10

    3 statement: expression .
    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    '+'  deslocar, e ir ao estado 17
    '-'  deslocar, e ir ao estado 18
    '*'  deslocar, e ir ao estado 19
    '/'  deslocar, e ir ao estado 20
    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 3 (statement)


Estado 11

   17 expression: logico .

    $padrão  reduzir usando a regra 17 (expression)


Estado 12

    6 expression: VARIABLE .

    $padrão  reduzir usando a regra 6 (expression)


Estado 13

    4 statement: VARIABLE expression .
    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    '+'  deslocar, e ir ao estado 17
    '-'  deslocar, e ir ao estado 18
    '*'  deslocar, e ir ao estado 19
    '/'  deslocar, e ir ao estado 20
    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 4 (statement)


Estado 14

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   21 logico: NOT expression .
   22       | expression . OR expression
   23       | expression . AND expression

    $padrão  reduzir usando a regra 21 (logico)


Estado 15

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   18           | '(' expression . ')'
   22 logico: expression . OR expression
   23       | expression . AND expression

    '+'  deslocar, e ir ao estado 17
    '-'  deslocar, e ir ao estado 18
    '*'  deslocar, e ir ao estado 19
    '/'  deslocar, e ir ao estado 20
    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28
    ')'  deslocar, e ir ao estado 29


Estado 16

    1 program: program statement '\n' .

    $padrão  reduzir usando a regra 1 (program)


Estado 17

    7 expression: expression '+' . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 30
    logico      ir ao estado 11


Estado 18

    8 expression: expression '-' . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 31
    logico      ir ao estado 11


Estado 19

    9 expression: expression '*' . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 32
    logico      ir ao estado 11


Estado 20

   10 expression: expression '/' . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 33
    logico      ir ao estado 11


Estado 21

   14 expression: expression LE . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 34
    logico      ir ao estado 11


Estado 22

   13 expression: expression GE . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 35
    logico      ir ao estado 11


Estado 23

   15 expression: expression EQ . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 36
    logico      ir ao estado 11


Estado 24

   16 expression: expression NE . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 37
    logico      ir ao estado 11


Estado 25

   12 expression: expression '<' . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 38
    logico      ir ao estado 11


Estado 26

   11 expression: expression '>' . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 39
    logico      ir ao estado 11


Estado 27

   23 logico: expression AND . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 40
    logico      ir ao estado 11


Estado 28

   22 logico: expression OR . expression

    INTEGER   deslocar, e ir ao estado 3
    VARIABLE  deslocar, e ir ao estado 12
    TRUE      deslocar, e ir ao estado 5
    FALSE     deslocar, e ir ao estado 6
    NOT       deslocar, e ir ao estado 7
    '('       deslocar, e ir ao estado 8

    expression  ir ao estado 41
    logico      ir ao estado 11


Estado 29

   18 expression: '(' expression ')' .

    $padrão  reduzir usando a regra 18 (expression)


Estado 30

    7 expression: expression . '+' expression
    7           | expression '+' expression .
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    '*'  deslocar, e ir ao estado 19
    '/'  deslocar, e ir ao estado 20
    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 7 (expression)


Estado 31

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    8           | expression '-' expression .
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    '*'  deslocar, e ir ao estado 19
    '/'  deslocar, e ir ao estado 20
    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 8 (expression)


Estado 32

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
    9           | expression '*' expression .
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 9 (expression)


Estado 33

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   10           | expression '/' expression .
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    LE   deslocar, e ir ao estado 21
    GE   deslocar, e ir ao estado 22
    EQ   deslocar, e ir ao estado 23
    NE   deslocar, e ir ao estado 24
    '<'  deslocar, e ir ao estado 25
    '>'  deslocar, e ir ao estado 26
    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 10 (expression)


Estado 34

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   14           | expression LE expression .
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 14 (expression)


Estado 35

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   13           | expression GE expression .
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 13 (expression)


Estado 36

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   15           | expression EQ expression .
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 15 (expression)


Estado 37

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   16           | expression NE expression .
   22 logico: expression . OR expression
   23       | expression . AND expression

    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 16 (expression)


Estado 38

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   12           | expression '<' expression .
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 12 (expression)


Estado 39

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   11           | expression '>' expression .
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression

    AND  deslocar, e ir ao estado 27
    OR   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 11 (expression)


Estado 40

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   23       | expression . AND expression
   23       | expression AND expression .

    $padrão  reduzir usando a regra 23 (logico)


Estado 41

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   11           | expression . '>' expression
   12           | expression . '<' expression
   13           | expression . GE expression
   14           | expression . LE expression
   15           | expression . EQ expression
   16           | expression . NE expression
   22 logico: expression . OR expression
   22       | expression OR expression .
   23       | expression . AND expression

    $padrão  reduzir usando a regra 22 (logico)
